--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 
 body {
-        background-color: black;
+        background-color: rgb(23, 22, 22);
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -56,6 +56,7 @@ body {
 
 /* -----------------navbar----------------- */
 #navbar{
+    
     top: 0;
     left: 0;
     width: 100%;
@@ -67,7 +68,14 @@ body {
     border-radius: 10px;
     box-shadow: #3853c7 0px 20px 60px, #19ad88 -20px -20px 60px;
 }
-
+@media (max-width: 600px)
+{
+  #navbar {
+    flex-direction: column;
+    height:150px;
+    padding: 10px;
+  }
+}
 
 /* ------------------card ----------------- */
 
